# google-test-dummy-project

./: CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  README.md
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.c  lib.h  main.c  mocked_lib.c  mocked_lib.h
test/: CMakeLists.txt
test/source/: mocking_test.cpp
